bin/Debug/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMENTARIOSBLOQUE
    COMENTARIOSLINEA
    RESERVADA
    SEP

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAM LLAVEABRE lista_declaracion lista_sentencias LLAVECIERRA
Rule 2     programa -> PROGRAM LLAVEABRE LLAVECIERRA
Rule 3     programa -> PROGRAM LLAVEABRE lista_declaracion LLAVECIERRA
Rule 4     lista_declaracion -> declaracion
Rule 5     lista_declaracion -> declaracion lista_declaracion
Rule 6     declaracion -> tipo lista_id PUNTOCOMA
Rule 7     declaracion -> tipo lista_id error
Rule 8     tipo -> INT
Rule 9     tipo -> FLOAT
Rule 10    tipo -> BOOL
Rule 11    lista_id -> IDENTIFIER COMA IDENTIFIER
Rule 12    lista_id -> IDENTIFIER
Rule 13    lista_sentencias -> sentencia
Rule 14    lista_sentencias -> sentencia lista_sentencias
Rule 15    sentencia -> seleccion
Rule 16    sentencia -> iteracion
Rule 17    sentencia -> repeticion
Rule 18    sentencia -> sent_read
Rule 19    sentencia -> sent_write
Rule 20    sentencia -> bloque
Rule 21    sentencia -> asignacion
Rule 22    seleccion -> IF LPAREN b_expresion RPAREN THEN bloque
Rule 23    seleccion -> IF LPAREN b_expresion RPAREN ELSE bloque FI
Rule 24    seleccion -> IF LPAREN b_expresion RPAREN THEN bloque FI
Rule 25    iteracion -> WHILE LPAREN b_expresion RPAREN THEN bloque
Rule 26    repeticion -> DO bloque UNTIL LPAREN b_expresion RPAREN PUNTOCOMA
Rule 27    sent_read -> READ IDENTIFIER PUNTOCOMA
Rule 28    sent_write -> WRITE b_expresion PUNTOCOMA
Rule 29    bloque -> LLAVEABRE lista_sentencias LLAVECIERRA
Rule 30    asignacion -> IDENTIFIER IGUAL b_expresion PUNTOCOMA
Rule 31    b_expresion -> b_term OR b_term
Rule 32    b_expresion -> b_term
Rule 33    b_term -> not_factor AND not_factor
Rule 34    b_term -> not_factor
Rule 35    not_factor -> NOT b_factor
Rule 36    not_factor -> b_factor
Rule 37    b_factor -> LPAREN TRUE RPAREN
Rule 38    b_factor -> LPAREN FALSE RPAREN
Rule 39    b_factor -> relacion
Rule 40    relacion -> expresion rel_Op expresion
Rule 41    relacion -> expresion
Rule 42    rel_Op -> MENORIGUAL
Rule 43    rel_Op -> MENOR
Rule 44    rel_Op -> MAYOR
Rule 45    rel_Op -> MAYORIGUAL
Rule 46    rel_Op -> IGUALIGUAL
Rule 47    rel_Op -> DIFERENTE
Rule 48    expresion -> termino suma_Op termino
Rule 49    expresion -> termino
Rule 50    suma_Op -> PLUS
Rule 51    suma_Op -> MINUS
Rule 52    termino -> signoFactor multi_Op signoFactor
Rule 53    termino -> signoFactor
Rule 54    multi_Op -> TIMES
Rule 55    multi_Op -> DIVIDE
Rule 56    signoFactor -> suma_Op factor
Rule 57    signoFactor -> factor
Rule 58    factor -> LPAREN b_expresion RPAREN
Rule 59    factor -> NUMBER
Rule 60    factor -> FLOATNUMBER
Rule 61    factor -> IDENTIFIER

Terminals, with rules where they appear

AND                  : 33
BOOL                 : 10
COMA                 : 11
COMENTARIOSBLOQUE    : 
COMENTARIOSLINEA     : 
DIFERENTE            : 47
DIVIDE               : 55
DO                   : 26
ELSE                 : 23
FALSE                : 38
FI                   : 23 24
FLOAT                : 9
FLOATNUMBER          : 60
IDENTIFIER           : 11 11 12 27 30 61
IF                   : 22 23 24
IGUAL                : 30
IGUALIGUAL           : 46
INT                  : 8
LLAVEABRE            : 1 2 3 29
LLAVECIERRA          : 1 2 3 29
LPAREN               : 22 23 24 25 26 37 38 58
MAYOR                : 44
MAYORIGUAL           : 45
MENOR                : 43
MENORIGUAL           : 42
MINUS                : 51
NOT                  : 35
NUMBER               : 59
OR                   : 31
PLUS                 : 50
PROGRAM              : 1 2 3
PUNTOCOMA            : 6 26 27 28 30
READ                 : 27
RESERVADA            : 
RPAREN               : 22 23 24 25 26 37 38 58
SEP                  : 
THEN                 : 22 24 25
TIMES                : 54
TRUE                 : 37
UNTIL                : 26
WHILE                : 25
WRITE                : 28
error                : 7

Nonterminals, with rules where they appear

asignacion           : 21
b_expresion          : 22 23 24 25 26 28 30 58
b_factor             : 35 36
b_term               : 31 31 32
bloque               : 20 22 23 24 25 26
declaracion          : 4 5
expresion            : 40 40 41
factor               : 56 57
iteracion            : 16
lista_declaracion    : 1 3 5
lista_id             : 6 7
lista_sentencias     : 1 14 29
multi_Op             : 52
not_factor           : 33 33 34
programa             : 0
rel_Op               : 40
relacion             : 39
repeticion           : 17
seleccion            : 15
sent_read            : 18
sent_write           : 19
sentencia            : 13 14
signoFactor          : 52 52 53
suma_Op              : 48 56
termino              : 48 48 49
tipo                 : 6 7

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAM LLAVEABRE lista_declaracion lista_sentencias LLAVECIERRA
    (2) programa -> . PROGRAM LLAVEABRE LLAVECIERRA
    (3) programa -> . PROGRAM LLAVEABRE lista_declaracion LLAVECIERRA

    PROGRAM         shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAM . LLAVEABRE lista_declaracion lista_sentencias LLAVECIERRA
    (2) programa -> PROGRAM . LLAVEABRE LLAVECIERRA
    (3) programa -> PROGRAM . LLAVEABRE lista_declaracion LLAVECIERRA

    LLAVEABRE       shift and go to state 3


state 3

    (1) programa -> PROGRAM LLAVEABRE . lista_declaracion lista_sentencias LLAVECIERRA
    (2) programa -> PROGRAM LLAVEABRE . LLAVECIERRA
    (3) programa -> PROGRAM LLAVEABRE . lista_declaracion LLAVECIERRA
    (4) lista_declaracion -> . declaracion
    (5) lista_declaracion -> . declaracion lista_declaracion
    (6) declaracion -> . tipo lista_id PUNTOCOMA
    (7) declaracion -> . tipo lista_id error
    (8) tipo -> . INT
    (9) tipo -> . FLOAT
    (10) tipo -> . BOOL

    LLAVECIERRA     shift and go to state 5
    INT             shift and go to state 8
    FLOAT           shift and go to state 9
    BOOL            shift and go to state 10

    lista_declaracion              shift and go to state 4
    declaracion                    shift and go to state 6
    tipo                           shift and go to state 7

state 4

    (1) programa -> PROGRAM LLAVEABRE lista_declaracion . lista_sentencias LLAVECIERRA
    (3) programa -> PROGRAM LLAVEABRE lista_declaracion . LLAVECIERRA
    (13) lista_sentencias -> . sentencia
    (14) lista_sentencias -> . sentencia lista_sentencias
    (15) sentencia -> . seleccion
    (16) sentencia -> . iteracion
    (17) sentencia -> . repeticion
    (18) sentencia -> . sent_read
    (19) sentencia -> . sent_write
    (20) sentencia -> . bloque
    (21) sentencia -> . asignacion
    (22) seleccion -> . IF LPAREN b_expresion RPAREN THEN bloque
    (23) seleccion -> . IF LPAREN b_expresion RPAREN ELSE bloque FI
    (24) seleccion -> . IF LPAREN b_expresion RPAREN THEN bloque FI
    (25) iteracion -> . WHILE LPAREN b_expresion RPAREN THEN bloque
    (26) repeticion -> . DO bloque UNTIL LPAREN b_expresion RPAREN PUNTOCOMA
    (27) sent_read -> . READ IDENTIFIER PUNTOCOMA
    (28) sent_write -> . WRITE b_expresion PUNTOCOMA
    (29) bloque -> . LLAVEABRE lista_sentencias LLAVECIERRA
    (30) asignacion -> . IDENTIFIER IGUAL b_expresion PUNTOCOMA

    LLAVECIERRA     shift and go to state 13
    IF              shift and go to state 22
    WHILE           shift and go to state 23
    DO              shift and go to state 24
    READ            shift and go to state 25
    WRITE           shift and go to state 27
    LLAVEABRE       shift and go to state 11
    IDENTIFIER      shift and go to state 26

    lista_sentencias               shift and go to state 12
    sentencia                      shift and go to state 14
    seleccion                      shift and go to state 15
    iteracion                      shift and go to state 16
    repeticion                     shift and go to state 17
    sent_read                      shift and go to state 18
    sent_write                     shift and go to state 19
    bloque                         shift and go to state 20
    asignacion                     shift and go to state 21

state 5

    (2) programa -> PROGRAM LLAVEABRE LLAVECIERRA .

    $end            reduce using rule 2 (programa -> PROGRAM LLAVEABRE LLAVECIERRA .)


state 6

    (4) lista_declaracion -> declaracion .
    (5) lista_declaracion -> declaracion . lista_declaracion
    (4) lista_declaracion -> . declaracion
    (5) lista_declaracion -> . declaracion lista_declaracion
    (6) declaracion -> . tipo lista_id PUNTOCOMA
    (7) declaracion -> . tipo lista_id error
    (8) tipo -> . INT
    (9) tipo -> . FLOAT
    (10) tipo -> . BOOL

    LLAVECIERRA     reduce using rule 4 (lista_declaracion -> declaracion .)
    IF              reduce using rule 4 (lista_declaracion -> declaracion .)
    WHILE           reduce using rule 4 (lista_declaracion -> declaracion .)
    DO              reduce using rule 4 (lista_declaracion -> declaracion .)
    READ            reduce using rule 4 (lista_declaracion -> declaracion .)
    WRITE           reduce using rule 4 (lista_declaracion -> declaracion .)
    LLAVEABRE       reduce using rule 4 (lista_declaracion -> declaracion .)
    IDENTIFIER      reduce using rule 4 (lista_declaracion -> declaracion .)
    INT             shift and go to state 8
    FLOAT           shift and go to state 9
    BOOL            shift and go to state 10

    declaracion                    shift and go to state 6
    lista_declaracion              shift and go to state 28
    tipo                           shift and go to state 7

state 7

    (6) declaracion -> tipo . lista_id PUNTOCOMA
    (7) declaracion -> tipo . lista_id error
    (11) lista_id -> . IDENTIFIER COMA IDENTIFIER
    (12) lista_id -> . IDENTIFIER

    IDENTIFIER      shift and go to state 30

    lista_id                       shift and go to state 29

state 8

    (8) tipo -> INT .

    IDENTIFIER      reduce using rule 8 (tipo -> INT .)


state 9

    (9) tipo -> FLOAT .

    IDENTIFIER      reduce using rule 9 (tipo -> FLOAT .)


state 10

    (10) tipo -> BOOL .

    IDENTIFIER      reduce using rule 10 (tipo -> BOOL .)


state 11

    (29) bloque -> LLAVEABRE . lista_sentencias LLAVECIERRA
    (13) lista_sentencias -> . sentencia
    (14) lista_sentencias -> . sentencia lista_sentencias
    (15) sentencia -> . seleccion
    (16) sentencia -> . iteracion
    (17) sentencia -> . repeticion
    (18) sentencia -> . sent_read
    (19) sentencia -> . sent_write
    (20) sentencia -> . bloque
    (21) sentencia -> . asignacion
    (22) seleccion -> . IF LPAREN b_expresion RPAREN THEN bloque
    (23) seleccion -> . IF LPAREN b_expresion RPAREN ELSE bloque FI
    (24) seleccion -> . IF LPAREN b_expresion RPAREN THEN bloque FI
    (25) iteracion -> . WHILE LPAREN b_expresion RPAREN THEN bloque
    (26) repeticion -> . DO bloque UNTIL LPAREN b_expresion RPAREN PUNTOCOMA
    (27) sent_read -> . READ IDENTIFIER PUNTOCOMA
    (28) sent_write -> . WRITE b_expresion PUNTOCOMA
    (29) bloque -> . LLAVEABRE lista_sentencias LLAVECIERRA
    (30) asignacion -> . IDENTIFIER IGUAL b_expresion PUNTOCOMA

    IF              shift and go to state 22
    WHILE           shift and go to state 23
    DO              shift and go to state 24
    READ            shift and go to state 25
    WRITE           shift and go to state 27
    LLAVEABRE       shift and go to state 11
    IDENTIFIER      shift and go to state 26

    lista_sentencias               shift and go to state 31
    sentencia                      shift and go to state 14
    seleccion                      shift and go to state 15
    iteracion                      shift and go to state 16
    repeticion                     shift and go to state 17
    sent_read                      shift and go to state 18
    sent_write                     shift and go to state 19
    bloque                         shift and go to state 20
    asignacion                     shift and go to state 21

state 12

    (1) programa -> PROGRAM LLAVEABRE lista_declaracion lista_sentencias . LLAVECIERRA

    LLAVECIERRA     shift and go to state 32


state 13

    (3) programa -> PROGRAM LLAVEABRE lista_declaracion LLAVECIERRA .

    $end            reduce using rule 3 (programa -> PROGRAM LLAVEABRE lista_declaracion LLAVECIERRA .)


state 14

    (13) lista_sentencias -> sentencia .
    (14) lista_sentencias -> sentencia . lista_sentencias
    (13) lista_sentencias -> . sentencia
    (14) lista_sentencias -> . sentencia lista_sentencias
    (15) sentencia -> . seleccion
    (16) sentencia -> . iteracion
    (17) sentencia -> . repeticion
    (18) sentencia -> . sent_read
    (19) sentencia -> . sent_write
    (20) sentencia -> . bloque
    (21) sentencia -> . asignacion
    (22) seleccion -> . IF LPAREN b_expresion RPAREN THEN bloque
    (23) seleccion -> . IF LPAREN b_expresion RPAREN ELSE bloque FI
    (24) seleccion -> . IF LPAREN b_expresion RPAREN THEN bloque FI
    (25) iteracion -> . WHILE LPAREN b_expresion RPAREN THEN bloque
    (26) repeticion -> . DO bloque UNTIL LPAREN b_expresion RPAREN PUNTOCOMA
    (27) sent_read -> . READ IDENTIFIER PUNTOCOMA
    (28) sent_write -> . WRITE b_expresion PUNTOCOMA
    (29) bloque -> . LLAVEABRE lista_sentencias LLAVECIERRA
    (30) asignacion -> . IDENTIFIER IGUAL b_expresion PUNTOCOMA

    LLAVECIERRA     reduce using rule 13 (lista_sentencias -> sentencia .)
    IF              shift and go to state 22
    WHILE           shift and go to state 23
    DO              shift and go to state 24
    READ            shift and go to state 25
    WRITE           shift and go to state 27
    LLAVEABRE       shift and go to state 11
    IDENTIFIER      shift and go to state 26

    sentencia                      shift and go to state 14
    lista_sentencias               shift and go to state 33
    seleccion                      shift and go to state 15
    iteracion                      shift and go to state 16
    repeticion                     shift and go to state 17
    sent_read                      shift and go to state 18
    sent_write                     shift and go to state 19
    bloque                         shift and go to state 20
    asignacion                     shift and go to state 21

state 15

    (15) sentencia -> seleccion .

    IF              reduce using rule 15 (sentencia -> seleccion .)
    WHILE           reduce using rule 15 (sentencia -> seleccion .)
    DO              reduce using rule 15 (sentencia -> seleccion .)
    READ            reduce using rule 15 (sentencia -> seleccion .)
    WRITE           reduce using rule 15 (sentencia -> seleccion .)
    LLAVEABRE       reduce using rule 15 (sentencia -> seleccion .)
    IDENTIFIER      reduce using rule 15 (sentencia -> seleccion .)
    LLAVECIERRA     reduce using rule 15 (sentencia -> seleccion .)


state 16

    (16) sentencia -> iteracion .

    IF              reduce using rule 16 (sentencia -> iteracion .)
    WHILE           reduce using rule 16 (sentencia -> iteracion .)
    DO              reduce using rule 16 (sentencia -> iteracion .)
    READ            reduce using rule 16 (sentencia -> iteracion .)
    WRITE           reduce using rule 16 (sentencia -> iteracion .)
    LLAVEABRE       reduce using rule 16 (sentencia -> iteracion .)
    IDENTIFIER      reduce using rule 16 (sentencia -> iteracion .)
    LLAVECIERRA     reduce using rule 16 (sentencia -> iteracion .)


state 17

    (17) sentencia -> repeticion .

    IF              reduce using rule 17 (sentencia -> repeticion .)
    WHILE           reduce using rule 17 (sentencia -> repeticion .)
    DO              reduce using rule 17 (sentencia -> repeticion .)
    READ            reduce using rule 17 (sentencia -> repeticion .)
    WRITE           reduce using rule 17 (sentencia -> repeticion .)
    LLAVEABRE       reduce using rule 17 (sentencia -> repeticion .)
    IDENTIFIER      reduce using rule 17 (sentencia -> repeticion .)
    LLAVECIERRA     reduce using rule 17 (sentencia -> repeticion .)


state 18

    (18) sentencia -> sent_read .

    IF              reduce using rule 18 (sentencia -> sent_read .)
    WHILE           reduce using rule 18 (sentencia -> sent_read .)
    DO              reduce using rule 18 (sentencia -> sent_read .)
    READ            reduce using rule 18 (sentencia -> sent_read .)
    WRITE           reduce using rule 18 (sentencia -> sent_read .)
    LLAVEABRE       reduce using rule 18 (sentencia -> sent_read .)
    IDENTIFIER      reduce using rule 18 (sentencia -> sent_read .)
    LLAVECIERRA     reduce using rule 18 (sentencia -> sent_read .)


state 19

    (19) sentencia -> sent_write .

    IF              reduce using rule 19 (sentencia -> sent_write .)
    WHILE           reduce using rule 19 (sentencia -> sent_write .)
    DO              reduce using rule 19 (sentencia -> sent_write .)
    READ            reduce using rule 19 (sentencia -> sent_write .)
    WRITE           reduce using rule 19 (sentencia -> sent_write .)
    LLAVEABRE       reduce using rule 19 (sentencia -> sent_write .)
    IDENTIFIER      reduce using rule 19 (sentencia -> sent_write .)
    LLAVECIERRA     reduce using rule 19 (sentencia -> sent_write .)


state 20

    (20) sentencia -> bloque .

    IF              reduce using rule 20 (sentencia -> bloque .)
    WHILE           reduce using rule 20 (sentencia -> bloque .)
    DO              reduce using rule 20 (sentencia -> bloque .)
    READ            reduce using rule 20 (sentencia -> bloque .)
    WRITE           reduce using rule 20 (sentencia -> bloque .)
    LLAVEABRE       reduce using rule 20 (sentencia -> bloque .)
    IDENTIFIER      reduce using rule 20 (sentencia -> bloque .)
    LLAVECIERRA     reduce using rule 20 (sentencia -> bloque .)


state 21

    (21) sentencia -> asignacion .

    IF              reduce using rule 21 (sentencia -> asignacion .)
    WHILE           reduce using rule 21 (sentencia -> asignacion .)
    DO              reduce using rule 21 (sentencia -> asignacion .)
    READ            reduce using rule 21 (sentencia -> asignacion .)
    WRITE           reduce using rule 21 (sentencia -> asignacion .)
    LLAVEABRE       reduce using rule 21 (sentencia -> asignacion .)
    IDENTIFIER      reduce using rule 21 (sentencia -> asignacion .)
    LLAVECIERRA     reduce using rule 21 (sentencia -> asignacion .)


state 22

    (22) seleccion -> IF . LPAREN b_expresion RPAREN THEN bloque
    (23) seleccion -> IF . LPAREN b_expresion RPAREN ELSE bloque FI
    (24) seleccion -> IF . LPAREN b_expresion RPAREN THEN bloque FI

    LPAREN          shift and go to state 34


state 23

    (25) iteracion -> WHILE . LPAREN b_expresion RPAREN THEN bloque

    LPAREN          shift and go to state 35


state 24

    (26) repeticion -> DO . bloque UNTIL LPAREN b_expresion RPAREN PUNTOCOMA
    (29) bloque -> . LLAVEABRE lista_sentencias LLAVECIERRA

    LLAVEABRE       shift and go to state 11

    bloque                         shift and go to state 36

state 25

    (27) sent_read -> READ . IDENTIFIER PUNTOCOMA

    IDENTIFIER      shift and go to state 37


state 26

    (30) asignacion -> IDENTIFIER . IGUAL b_expresion PUNTOCOMA

    IGUAL           shift and go to state 38


state 27

    (28) sent_write -> WRITE . b_expresion PUNTOCOMA
    (31) b_expresion -> . b_term OR b_term
    (32) b_expresion -> . b_term
    (33) b_term -> . not_factor AND not_factor
    (34) b_term -> . not_factor
    (35) not_factor -> . NOT b_factor
    (36) not_factor -> . b_factor
    (37) b_factor -> . LPAREN TRUE RPAREN
    (38) b_factor -> . LPAREN FALSE RPAREN
    (39) b_factor -> . relacion
    (40) relacion -> . expresion rel_Op expresion
    (41) relacion -> . expresion
    (48) expresion -> . termino suma_Op termino
    (49) expresion -> . termino
    (52) termino -> . signoFactor multi_Op signoFactor
    (53) termino -> . signoFactor
    (56) signoFactor -> . suma_Op factor
    (57) signoFactor -> . factor
    (50) suma_Op -> . PLUS
    (51) suma_Op -> . MINUS
    (58) factor -> . LPAREN b_expresion RPAREN
    (59) factor -> . NUMBER
    (60) factor -> . FLOATNUMBER
    (61) factor -> . IDENTIFIER

    NOT             shift and go to state 42
    LPAREN          shift and go to state 44
    PLUS            shift and go to state 51
    MINUS           shift and go to state 52
    NUMBER          shift and go to state 53
    FLOATNUMBER     shift and go to state 54
    IDENTIFIER      shift and go to state 55

    b_expresion                    shift and go to state 39
    b_term                         shift and go to state 40
    not_factor                     shift and go to state 41
    b_factor                       shift and go to state 43
    relacion                       shift and go to state 45
    expresion                      shift and go to state 46
    termino                        shift and go to state 47
    suma_Op                        shift and go to state 48
    signoFactor                    shift and go to state 49
    factor                         shift and go to state 50

state 28

    (5) lista_declaracion -> declaracion lista_declaracion .

    LLAVECIERRA     reduce using rule 5 (lista_declaracion -> declaracion lista_declaracion .)
    IF              reduce using rule 5 (lista_declaracion -> declaracion lista_declaracion .)
    WHILE           reduce using rule 5 (lista_declaracion -> declaracion lista_declaracion .)
    DO              reduce using rule 5 (lista_declaracion -> declaracion lista_declaracion .)
    READ            reduce using rule 5 (lista_declaracion -> declaracion lista_declaracion .)
    WRITE           reduce using rule 5 (lista_declaracion -> declaracion lista_declaracion .)
    LLAVEABRE       reduce using rule 5 (lista_declaracion -> declaracion lista_declaracion .)
    IDENTIFIER      reduce using rule 5 (lista_declaracion -> declaracion lista_declaracion .)


state 29

    (6) declaracion -> tipo lista_id . PUNTOCOMA
    (7) declaracion -> tipo lista_id . error

    PUNTOCOMA       shift and go to state 56
    error           shift and go to state 57


state 30

    (11) lista_id -> IDENTIFIER . COMA IDENTIFIER
    (12) lista_id -> IDENTIFIER .

    COMA            shift and go to state 58
    PUNTOCOMA       reduce using rule 12 (lista_id -> IDENTIFIER .)
    error           reduce using rule 12 (lista_id -> IDENTIFIER .)


state 31

    (29) bloque -> LLAVEABRE lista_sentencias . LLAVECIERRA

    LLAVECIERRA     shift and go to state 59


state 32

    (1) programa -> PROGRAM LLAVEABRE lista_declaracion lista_sentencias LLAVECIERRA .

    $end            reduce using rule 1 (programa -> PROGRAM LLAVEABRE lista_declaracion lista_sentencias LLAVECIERRA .)


state 33

    (14) lista_sentencias -> sentencia lista_sentencias .

    LLAVECIERRA     reduce using rule 14 (lista_sentencias -> sentencia lista_sentencias .)


state 34
